services/profile-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-api
  namespace: microservice
spec:
  selector:
    app: profile-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
