services/profile-api/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: profile-api-network-policy
  namespace: microservice
spec:
  podSelector:
    matchLabels:
      app: profile-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: microservice
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.86.115/32
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: microservice
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
